<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/firstTask"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:background="@drawable/button_shape_round" />

        <TextView
            android:id="@+id/firstTaskName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:text="@string/firstTaskName" />

        <Button
            android:id="@+id/secondTask"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/button_shape_round" />

        <TextView
            android:id="@+id/secondTaskName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:text="@string/secondTaskName" />


        <Button
            android:id="@+id/thirdTask"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/button_shape_round" />

        <TextView
            android:id="@+id/thirdTaskName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="150dp"
            android:textSize="22sp"
            android:text="@string/thirdTaskName" />
    </LinearLayout>

</ScrollView>